# ChangeLog for app-cdr/gnomebaker
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-cdr/gnomebaker/ChangeLog,v 1.14 2005/12/21 13:06:13 metalgod Exp $

  21 Dec 2005; Luis Medinas <metalgod@gentoo.org> -gnomebaker-0.4.ebuild,
  -gnomebaker-0.4.1.ebuild, gnomebaker-0.4.2.ebuild,
  gnomebaker-0.5.0.ebuild, gnomebaker-0.5.0-r1.ebuild:
  Add scrollkeeper dependency see bug #115928. Removed older versions.

  04 Dec 2005; Zaheer Abbas Merali <zaheerm@gentoo.org>
  gnomebaker-0.4.2.ebuild, gnomebaker-0.5.0.ebuild,
  gnomebaker-0.5.0-r1.ebuild:
  Fix GStreamer dependencies

*gnomebaker-0.5.0-r1 (28 Nov 2005)

  28 Nov 2005; Herbie Hopkins <herbs@gentoo.org>
  +files/gnomebaker-0.5.0-64bit.diff, +gnomebaker-0.5.0-r1.ebuild:
  Add patch to fix burning on 64bit archs (now in upstream cvs).

  14 Nov 2005; Luis Medinas <metalgod@gentoo.org> gnomebaker-0.4.2.ebuild:
  Marked Stable on amd64.

  12 Nov 2005; Luis Medinas <metalgod@gentoo.org> gnomebaker-0.5.0.ebuild:
  libgnome2 dependency added fixes bug #112224.

*gnomebaker-0.5.0 (16 Oct 2005)

  16 Oct 2005; Luis Medinas <metalgod@gentoo.org> gnomebaker-0.4.2.ebuild,
  +gnomebaker-0.5.0.ebuild:
  Version bump. Added cdrdao dependency bug #109203.

  10 Sep 2005; Luis Medinas <metalgod@gentoo.org> -gnomebaker-0.3.ebuild,
  gnomebaker-0.4.ebuild:
  Marked Stable on AMD64. Removed older versions.

  31 Aug 2005; Aron Griffis <agriffis@gentoo.org> gnomebaker-0.4.2.ebuild:
  add ~ia64

*gnomebaker-0.4.2 (28 Aug 2005)

  28 Aug 2005; Luis Medinas <metalgod@gentoo.org> +gnomebaker-0.4.2.ebuild:
  Version Bump. Closes bug #103549.

*gnomebaker-0.4.1 (17 Aug 2005)

  17 Aug 2005; Luis Medinas <metalgod@gentoo.org> +gnomebaker-0.4.1.ebuild:
  Version Bump.

*gnomebaker-0.4 (05 Aug 2005)

  05 Aug 2005; Lars Weiler <pylon@gentoo.org> +gnomebaker-0.4.ebuild:
  Version bump; Bug #99252.

  17 Jun 2005; Herbie Hopkins <herbs@gentoo.org> gnomebaker-0.3.ebuild: